# UnderLife

./: pyproject.toml
backend/: .gitignore  .pre-commit-config.yaml  DEPLOY.md  README.md  docker-compose.yaml  main.py  manage.py  pyproject.toml
backend/.agents/: settings.json
backend/.agents/agents/: lexroom-reviewer.md
backend/.agents/commands/: migration-check.md  ship.md
backend/.agents/skills/commit-message/: SKILL.md
backend/.agents/skills/new-ninja-endpoint/: SKILL.md
backend/.agents/skills/pre-commit-checks/: SKILL.md
backend/.agents/skills/run-tests/: SKILL.md
backend/.claude/: settings.local.json
backend/.claude/commands/: check.md  test-app.md
backend/.claude/skills/db-pool/: SKILL.md
backend/.claude/skills/django-async/: SKILL.md
backend/deploy/: deploy.sh  env.production.example  gunicorn.conf.py  underfinance-api.service
backend/docker/: .dockerignore  Dockerfile.development  Dockerfile.production
backend/docker/root/: start-api
backend/scripts/: deploy.sh  extract_env_vars.py
backend/scripts/settings/: base.py  development.py  jobs.py  pre_commit.py  production.py  testing.py
backend/under_backend/: api.py  asgi.py  settings.py  urls.py  wsgi.py
backend/under_backend/apps/banksync/: admin.py  api.py  apps.py  client.py  crypto.py  mapping.py  models.py  sync.py
backend/under_backend/apps/common/: admin.py  apps.py  backends.py  models.py
backend/under_backend/apps/finance/: admin.py  api.py  apps.py  defaults.py  models.py  transfers.py
backend/under_backend/services/: injection.py
frontend/: next.config.ts  (+2 more)
(+107 files in other folders)
