[project]
name = "underlife-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.4",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-ninja>=1.6.2",
    "django-ninja-extra>=0.31.4",
    "django-ninja-jwt>=5.4.4",
    "psycopg2-binary>=2.9.12",
]
